<resources>
    <string name="next">Next</string>   
     <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="cm">CM</string>
    <string name="plan_weight">Target Weight </string>
       <string name="now_weight">Current Weight </string> 
    <string name="kg">kg </string>
    <string name="length">你的步距(一般是45cm到60cm)</string>
    <string name="steps">步</string>
    <string name="default_weight">50 kg</string>
    <string name="default_weight_values">50</string>
    <string name="default_length_values">70</string>
    <string name="default_length">70 kg</string>
    <string name="sport_txt"> Sports </string>
    <string name="class_txt">Course </string>
    <string name="find_txt">Discover </string>
    <string name="heart_txt">Heart Rate </string>
    <string name="mine_txt">My</string>
    <string name="target">Fitness Goal</string>
    <string name="sport_title">步數目標</string>
    <string name="finish">complete </string>
    <string name="start_time">start time </string>
    <string name="stop_time">end time </string>
    <string name="set_start_time">Please set the start time </string>
    <string name="set_stop_time">Please set the end time </string>
    <string name="normal_weight_range">※ Your healthy weight range should be: </string>
    <string name="warm_up">WARM UP</string>
    <string name="mileage">公里</string>
    <string name="heat">大卡</string>
    <string name="km"> 公里</string>
    <string name="cal"> 大卡 </string>
    <string name="city">City: </string>
    <string name="city_name">City: Loading... </string>
    <string name="temperature">Temp: 00° C </string>
    <string name="air_quality">Detail: Cloud </string>
    <string name="temperature_hint">Temp: </string>
    <string name="temperature_unit">°C</string>
    <string name="quality">Detail: </string>
    <string name="sport_history">歷史記錄 </string>
    <string name="heathly">health record</string>
    <string name="change_image">Modify avatar</string>
    <string name="change_nick">Modify the nickname </string>
    <string name="change_gender">Modify gender</string>
    <string name="change_date">Modify birthday </string>
    <string name="default_date">2012-12-21</string>
    <string name="change_height">Modify the height </string>
    <string name="change_length"> Modify the step size </string>
    <string name="change_weight"> Modify weight </string>
    <string name="ok">OK</string>
    <string name="back">返回 </string>
    <string name="dialog_title">設置動運計畫</string>
    <string name="http">OKOKOKOKO</string>
    <string name="tel">IKIKIKIKIKIKI</string>
    <string name="email">Email: gmail.com</string>

    <string name="company">IVE </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="set_tip_time">設置提醒時間</string>
    <string name="end_date">結束日期</string>
    <string name="start_date">開始日期</string>
    <string name="title">標題</string>
    <string name = "warm_up_exercise0"> 俯身啞鈴飛鳥 </string>
    <string name = "warm_up_exercise1"> 俯臥撑 </string>
    <string name = "warm_up_exercise2"> 滾輪支點俯臥撑 </string>
    <string name = "warm_up_exercise3"> 平板卧推 </string>
    <string name = "warm_up_exercise4"> 仰臥平板槓鈴肱三彎舉 </string>
    <string name = "find_toast_start_sport"> 開始運動</string>
    <string name = "find_training_time"> 1組6次</string>
    <string name = "find_map_put"> 增加運動計畫</string>
    <string name = "Setting_plan_start_point"> 起始</string>
    <string name = "Setting_plan_end_point">結束</string>
    <string name = "Setting_plan_dialogstart_title">設置開始時間</string>
    <string name = "Setting_plan_dialogend_title">設置結束時間</string>
    <string name = "Setting_plan_dialog_error1">開始時間不可以大於結束小時間!</string>
    <string name = "Setting_plan_dialog_error2">開始時間不可以大於結束小時間!</string>
    <string name = "Setting_plan_dialog_settingError_Title">提示</string>
    <string name = "Setting_plan_dialog_settingError_Message">該時間點已被佔用，是否要覆蓋改時間點的運動計劃！!</string>
    <string name = "Setting_plan_dialog_EnterButton">確定</string>
    <string name = "Setting_plan_dialog_CancelButton">取消</string>
    <string name = "Setting_plan_dialog_CancelMsg">取消設置計劃！</string>
    <string name = "Setting_plan_settingSuccess_Msg">設置計劃成功!</string>
    <string name = "Setting_plan_settingFalse_Msg">設置計劃失敗！請重新設置計劃！</string>
    <string name = "Play_Msg">熱身完畢請點擊返回運動</string>
    <string name = "Play_Title">運動</string>
    <string name = "Play_end">運動結束</string>
    <string name = "Sport_final_target">您已達到目標步數,請適量運動！</string>
    <string name = "Sport_Dialog_title">提示</string>
    <string name = "Sport_Dialog_Msg">你有計劃沒有完成</string>
    <string name = "Sport_Dialog_Button1">點擊確定不再提示</string>
    <string name = "Sport_warmUp_click">跳到熱身界面!</string>
    <string name = "Function_exit_app">再按一次退出程序</string>
    <string name = "FoodhotTitle">食物熱量對照表</string>
    <string name = "Foodhot_food_type_array1">五穀類</string>
    <string name = "Foodhot_food_type_array2">蔬菜類</string>
    <string name = "Foodhot_food_type_array3">水果類</string>
    <string name = "Foodhot_food_type_array4">肉類</string>
    <string name = "Foodhot_food_type_array5">蛋類</string>
    <string name = "Foodhot_food_type_array6">水產类</string>
    <string name = "Foodhot_food_type_array7">奶類</string>
    <string name = "Foodhot_food_type_array8">飲料類</string>
    <string name = "Foodhot_food_type_array9">菌藻類</string>
    <string name = "Foodhot_food_type_array10">油脂類</string>
    <string name = "Foodhot_hot">千卡/克</string>
    <string name = "child_item_food_text">食物</string>
    <string name = "child_item_hot_text">熱量</string>
    <string name = "list_item_title_text">項目</string>
    <string name = "list_item_time_text">次數</string>
    <string name = "list_item_increase_text">增加運動計畫</string>
    <string name = "Mine_want_text1">在</string>
    <string name = "Mine_want_text2">xxxx年xx月x日</string>
    <string name = "Mine_want_text3">體重【</string>
    <string name = "Mine_want_text4">】公斤</string>
    <string name = "Mine_draw_x">日期</string>
    <string name = "Mine_draw_y">步數</string>
    <string name = "activity_play_sport_descript">運動說明</string>
    <string name = "activity_play_sport_record">運動記錄</string>
    <string name = "activity_play_sport_finish">完成熱身</string>
    <string name = "activity_play_sport_back">返回</string>
    <string name = "activity_setting_healthy_type">計畫類型</string>
    <string name = "fragement_mine_plan">我的計畫</string>
    <string name = "fragement_mine_hot_table">食物熱量對照表</string>
    <string name = "fragement_mine_step">步</string>
    <string name = "fragement_mine_target">目標步數</string>
    <string name = "fragement_mine_weight">體重</string>
    <string name = "fragement_mine_target2">目標</string>
    <string name = "group_item_title">類型</string>
    <string name="all">累積數據</string>
    <string name="find_day">記錄列表</string>
    <string name = "sportmsg_title">運動記錄</string>
    <string name = "sportmsg_Toast1">當前無數據!</string>
    <string name = "sportmsg_min">步</string>
    <string name = "stepItem_date">日期</string>
    <string name = "stepItem_step">步數</string>
    <string name = "stepItem_Distance">路程</string>
    <string name = "stepItem_M">米</string>
    <string name = "stepItem_hot">熱量</string>
    <string name = "stepItem_KCa">大卡</string>
    <string name = "sportmsg_state">您在KeepFit累積運動:</string>
    <string name = "sportmsg_initscores">0分</string>
    <string name = "sportmsg_complate">完成計畫</string>
    <string name = "sportmsg_howmuch">天</string>
    <string name = "sportmsg_counting">累積運動</string>
    <string name = "sportmsg_counting_spend">累積消耗</string>
    <string name = "sportmsg_unit">大卡</string>
    <string name = "sportmsg_counting_mix">累積的運動天數(當前/最大)</string>
    <string name = "sportmsg_day_week">1天/7天</string>
    <string name = "sportmsg_nodata">沒有數據</string>
    <string name = "minePlan_tips">提示時間:</string>
    <string name = "minePlan_change">更改計劃</string>
    <string name = "minePlan_title">我的計劃</string>
    <string name = "minePlan_delete">刪除計劃:</string>
    <string name = "minePlan_delete2">刪除計劃</string>
    <string name = "minePlan_delete_comfirm">確定刪除嗎?</string>
    <string name = "minePlan_delete_ok">確定?</string>
    <string name = "minePlan_delete3">刪除計劃</string>
    <string name = "minePlan_update_comfirm1">確定更改第【</string>
    <string name = "minePlan_update_comfirm2">】條計劃嗎？</string>
    <string name = "minePlan_update_error">結束時間不得小於當前時間</string>
    <string name = "minePlan_update_error2">該時間點有任務，請選擇請他的時間點！</string>

    <string name = "activity_update_change_notification_time">更改計劃提示時間</string>
    <string name = "activity_update_set_notification_time">設置提醒時間</string>
    <string name = "activity_update_change_end_time">更改結束日期</string>
    <string name = "activity_update_comfirm">確定更改計劃</string>
    <string name = "planItem_start_end">開始日期-結束日期</string>
    <string name = "planItem_notification_time">提示時間</string>
    <string name = "planItem_item">項目</string>
    <string name = "planItem_time">次數</string>
    <string name = "planItem_addPlan">添加計畫</string>
    <string name = "planItem_delPlan">删除計畫</string>
    <string name = "weight"> 體重</string>
    <string name="app_name">KeepFit</string>
    <string name="personal_information_one">你的信息 1/2</string>
    <string name="personal_information_two">你的信息 2/2</string>

    <string name="girl">女</string>
    <string name="boy">男</string>

    <string name="nick">暱稱</string>
    <string name="birthday">生日</string>
    <string name="height">身高 </string>
    <string name="please_write_nick">請填寫你的暱稱 </string>
    <string name="please_write_birthday">請填寫你的生日日期(yyyy-mm-dd)</string>
    <string name="please_write_height">請填寫你的身高 </string>
    <string name="back_black_image">請設置身高與體重信息！ </string>
    <string name="welcome_not_complate">請將相關信息填寫完整！ </string>
    <string name="go_back">返回上一步 </string>
    <string name="take_a_look">周圍看看! </string>
    <string name="set_plan">制定計畫</string>
    <string name="walk">周圍睇下</string>
    <string name="make_a_plan">制定計畫</string>

</resources>
